# tansiv

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  document.org  dummy_ping_deployment.xml
doc/docker/: building.md  code.md  running.md  todo.md
docs/: papers.txt  qemu.org
examples/benchs/: deployment.xml  gettimeofday.cpp  nova_cluster.xml  readme.md
examples/constant_rate/: README.md  constant_rate.tesh  deployment.xml  nova_cluster.xml  sink.c
examples/docker/: deployment_2.xml
examples/dummy_ping/: DummyPing.cpp  DummyPong.cpp  deployment.xml  dummy_ping_deployment.xml
examples/qemu/: .gitignore  deployment-ns3-qemukvm_2.xml  deployment-qemukvm_2.xml  deployment-xen.xml  deployment_2.xml  dumbbell-ns3.xml  star-ns3.xml  star.xml
examples/qemu_docker/: deployment_2.xml
examples/qemu_sink/: README.md  boot_and_log.sh  deployment.xml  qemu_sink_deployment.xml  sink.c
examples/qemus/: README.md  boot.py  boot_and_log.sh  deployment.xml  nova_cluster.xml  tantap-management.xml  tantap.xml
examples/send/: README.md  deployment.xml  send.cpp
grid5000/: constants.py  g5k.py  local.py  notansiv.py  requirements.txt
grid5000/inputs/: deployment_10_on_nova.xml  nova_cluster.xml
internship/: .gitignore  2020-internship-tansiv.tex  2020-itw-sysprog.tex  2020-mystere.c  2020-planete.c  exemptty.sty  internship-tansiv.tex
packer/: README.md  debian-10.3.0-x86_64.json
packer/http/: preseed.cfg
packer/scripts/: debian.sh
platform/: nova_cluster.xml
src/binser/: .gitignore  Cargo.toml
src/binser/binser_derive/src/: lib.rs
src/binser/src/: lib.rs
src/client/: Cargo.toml  LICENSE  Makefile
src/client/capi/: Cargo.toml
src/client/capi/src/: lib.rs  tansiv-client.h
src/client/tandocker/: Cargo.toml
src/client/tandocker/src/: main.rs
src/client/tandocker_capi/: Cargo.toml
src/client/tanproc/: Cargo.toml
src/client/tanproc/src/: lib.rs
src/client/tanproc_capi/: Cargo.toml
src/client/tanproc_capi/src/: lib.rs
src/client/tanproc_capi/tests/: Makefile  build_test.c
src/client/tanqemu/: Cargo.toml
src/client/tanqemu_capi/: Cargo.toml
src/client/tanqemukvm/: Cargo.toml
src/client/tanqemukvm_capi/: Cargo.toml
src/client/tansiv-client/: Cargo.toml  build.rs
src/client/tansiv-client/src/: buffer_pool.rs  bytes_buffer.rs  config.rs  debug.rs  error.rs  flatbuilder_buffer.rs  lib.rs  output_msg_set.rs  vsg_address.rs
src/client/tansiv-client/src/connector/: mod.rs  packets_generated.rs  unix.rs
src/client/tansiv-client/src/docker/: main.rs  mod.rs
src/client/tansiv-client/src/tap/: mod.rs  packet.rs
src/client/tansiv-client/src/timer/: mod.rs  process.rs
src/client/tansiv-client/src/timer/docker/: mod.rs
src/client/tansiv-client/src/timer/qemu/: mod.rs
src/client/tansiv-client/src/timer/qemukvm/: mod.rs
src/client/tansiv-client/src/timer/xen/: mod.rs
src/client/tansiv-client/src/tun/: mod.rs  packet.rs
src/client/tanxen/: Cargo.toml
src/client/tanxen_capi/: Cargo.toml
src/coordinator/: VmsCoordinator-ns3.cpp  VmsCoordinator-simgrid.cpp  VmsCoordinator.cpp  VmsInterface.cpp  VmsInterface.hpp
src/fake-vm/: Cargo.toml  Makefile
src/fake-vm/capi/: Cargo.toml
src/fake-vm/capi/src/: fake_vm.h  lib.rs
src/fake-vm/capi/tests/: Makefile  build_test.c
src/fake-vm/fake-vm/: Cargo.toml
src/fake-vm/fake-vm/src/connector/: mod.rs
src/fake-vm/fake_vm/: Cargo.toml
src/fake-vm/fake_vm/src/: buffer_pool.rs  config.rs  error.rs  lib.rs  output_msg_set.rs  timer.rs  waitfree_array_queue.rs
src/fake-vm/fake_vm/src/connector/: mod.rs  unix.rs
src/fake-vm/fake_vm_capi/: Cargo.toml
src/fake-vm/fake_vm_capi/tests/: Makefile  build_test.c
src/fake-vm/src/: config.rs  lib.rs
src/fake-vm/src/connector/: unix.rs
src/fake-vm/tanqemu_capi/: Cargo.toml
src/fake-vm/tansiv-client/: Cargo.toml
src/fake-vm/tansiv-client/src/: buffer_pool.rs  config.rs  lib.rs  vsg_address.rs
src/fake-vm/tansiv-client/src/timer/: mod.rs  process.rs
src/fake-vm/tansiv-client/src/timer/qemu/: mod.rs
src/fake-vm/tools/: vsg_wrapper.sh
src/include/: VmsInterface.hpp  vsg.h
src/kvm/: README.md
src/kvm/Kernelspace/: Makefile  tansiv-timer.c
src/kvm/Userspace/: userspace-tansiv-timer.c
src/kvm/include/: tansiv-timer.h
src/kvm/scripts/: isolate_processes.sh  pin_vcpus.sh
src/kvm/tansiv-timer/: CMakeLists.txt  tansiv-timer.c  tansiv-timer.h
src/libc_timer/src/: lib.rs
src/rust-deps/binser/binser_derive/: Cargo.toml
src/rust-deps/binser/binser_derive/src/: lib.rs
src/rust-deps/dynamic_queue_limits/: Cargo.toml
src/rust-deps/dynamic_queue_limits/src/: lib.rs
src/rust-deps/libc_timer/: Cargo.toml
src/rust-deps/qemu_timer_sys/: Cargo.toml  build.rs
src/rust-deps/qemu_timer_sys/src/: lib.rs
src/rust-deps/rate_limiter/: Cargo.toml
src/rust-deps/rate_limiter/src/: lib.rs
src/rust-deps/seq_lock/: Cargo.toml
src/rust-deps/seq_lock/src/: lib.rs
src/simgrid/: DummyPing.cpp  DummyPong.cpp  DummyVm.cpp  VmsCoordinator.cpp  VmsInterface.cpp
src/tests/: scenario.cpp  scenario.hpp  test.cpp  tests.cpp  tests.sh
src/vsg/: CMakeLists.txt  vsg.c  vsg.h
src/wire/: .gitignore  packets.fbs  socket.cpp  socket.hpp
src/xen/: .clang-format  Makefile  xen_tansiv_bridge.c
src/xen/Kernelspace/: tansiv-timer.c
src/xen/include/: tansiv-timer-xen.h
src/xen/tansiv-timer/: CMakeLists.txt  tansiv-timer-xen.c  tansiv-timer-xen.h
tools/: setup_local.sh
tools/cmake/: FindNS3.cmake
tools/packer/: README.md  debian-11.1.0-x86_64.json  debian-11.4.0-x86_64.json
tools/packer/scripts/: debian.sh  l_mklb_p_2018.3.011.tgz.sha256  minimize.sh  nbench-byte-2.2.3.tar.gz.sha256
