[package]
name = "capi"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"

[features]
default = []
process = ["tansiv-client/process"]
qemu = ["tansiv-client/qemu"]
qemukvm = ["tansiv-client/qemukvm"]
deadline-handler-debug = ["tansiv-client/deadline-handler-debug"]
use-own-logger = ["tansiv-client/use-own-logger"]

[dependencies]
tansiv-client = {version = "0.1.0", path = "../tansiv-client"}
chrono = "0.4"
libc = "0.2"
log = "0.4"
static_assertions = "0.3.1"

[dev-dependencies]
tansiv-client = {version = "0.1.0", path = "../tansiv-client", features = ["test-helpers"]}
seq_lock = {version = "0.1.0", path = "../../rust-deps/seq_lock"}
