[package]
name = "tanqemukvm_capi"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"

[dependencies]
# capi = {version = "0.1.0", path = "../capi", features = ["qemukvm"]}
capi = {version = "0.1.0", path = "../capi", features = ["qemukvm", "deadline-handler-debug", "use-own-logger"]}

[lib]
name = "tanqemukvm"
crate-type = ["staticlib"]
