[package]
name = "tansiv-client"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"

[features]
default = []
process = []
qemu = []
deadline-handler-debug = []
use-own-logger = ["simple_logger"]
test-helpers = ["simple_logger"]

[dependencies]
binser = {version = "0.1.0", path = "../../rust-deps/binser"}
binser_derive = {version = "0.1.0", path = "../../rust-deps/binser/binser_derive"}
chrono = "0.4"
crossbeam-queue = {path = "../../rust-deps/crossbeam/crossbeam-queue", features = ["spsc-waitfree"]}
lazy_static = "1.3.0"
libc = "0.2"
libc_timer = {version = "0.1.0", path = "../../rust-deps/libc_timer"}
log = "0.4"
nix = "0.11"
seq_lock = {version = "0.1.0", path = "../../rust-deps/seq_lock"}
static_assertions = "0.3.1"
structopt = "0.2"

simple_logger = {version = "1.11.0", optional = true}

[dev-dependencies]
simple_logger = "1.11.0"

[build-dependencies]
bindgen = "0.55.1"
