[package]
name = "tansiv-client"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"
rust-version = "1.66.0" # minimum

[features]
default = []
docker = []
process = []
qemu = []
qemukvm = []
deadline-handler-debug = []
use-own-logger = ["simple_logger"]
test-helpers = ["simple_logger"]

[dependencies]
chrono = "0.4"
crossbeam-queue = {path = "../../rust-deps/crossbeam/crossbeam-queue", features = ["spsc-waitfree"]}
flatbuffers = "2.0.0"
lazy_static = "1.3.0"
libc = "0.2"
libc_timer = {version = "0.1.0", path = "../../rust-deps/libc_timer"}
log = "0.4"
nix = "0.11"
seq_lock = {version = "0.1.0", path = "../../rust-deps/seq_lock"}
simple_logger = {version = "1.11.0", optional = true}
static_assertions = "0.3.1"
structopt = "0.2"
bytemuck = "1.13.1"
once_cell = "1.18.0"
epoll = "4.3.1"

[dev-dependencies]
simple_logger = "1.11.0"

[build-dependencies]
bindgen = "0.55.1"
flatc-rust = "0.2.0"
