[package]
name = "tanxen"
version = "0.1.0"
authors = ["Léo Cosseron <leo.cosseron@irisa.fr>"]
edition = "2018"

[dependencies]
#tansiv-client = {version = "0.1.0", path = "../tansiv-client", features = ["xen"]}
tansiv-client = {version = "0.1.0", path = "../tansiv-client", features = ["xen", "use-own-logger", "deadline-handler-debug"]}
