[package]
name = "tanxen_capi"
version = "0.1.0"
authors = ["Léo Cosseron <leo.cosseron@irisa.fr>"]
edition = "2018"

[dependencies]
# capi = {version = "0.1.0", path = "../capi", features = ["xen"]}
capi = {version = "0.1.0", path = "../capi", features = ["xen", "deadline-handler-debug", "use-own-logger"]}

[lib]
name = "tanxen"
crate-type = ["staticlib"]
