[package]
name = "fake_vm_capi"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"

[dependencies]
tansiv-client = {version = "0.1.0", path = "../tansiv-client", features = ["process"]}
libc = "0.2"
log = "0.4"
static_assertions = "0.3.1"

[dev-dependencies]
tansiv-client = {version = "0.1.0", path = "../tansiv-client", features = ["process", "test-helpers"]}
stderrlog = "0.4"

[lib]
name = "fake_vm"
crate-type = ["staticlib"]
