[package]
name = "fake-vm"
version = "0.1.0"
authors = ["Louis Rilling <l.rilling@av7.net>"]
edition = "2018"

[dependencies]
binser = {version = "0.1.0", path = "../../binser"}
binser_derive = {version = "0.1.0", path = "../../binser/binser_derive"}
chrono = "0.4"
libc = "0.2"
log = "0.4"
nix = "0.11"
static_assertions = "0.3.1"
structopt = "0.2"

[dev-dependencies]
stderrlog = "0.4"

[lib]
crate-type = ["cdylib"]
