[package]
name = "fake_vm"
version = "0.1.0"
authors = ["Louis Rilling <l.rilling@av7.net>"]
edition = "2018"

[features]
default = []
test-helpers = ["stderrlog"]

[dependencies]
binser = {version = "0.1.0", path = "../../binser"}
binser_derive = {version = "0.1.0", path = "../../binser/binser_derive"}
chrono = "0.4"
libc = "0.2"
log = "0.4"
nix = "0.11"
static_assertions = "0.3.1"
structopt = "0.2"

stderrlog = {version = "0.4", optional = true}

[dev-dependencies]
stderrlog = "0.4"
