[package]
name = "tansiv-client"
version = "0.1.0"
authors = ["Louis Rilling <louis.rilling@irisa.fr>"]
edition = "2018"

[features]
default = []
process = []
qemu = []
test-helpers = ["stderrlog"]

[dependencies]
binser = {version = "0.1.0", path = "../../binser"}
binser_derive = {version = "0.1.0", path = "../../binser/binser_derive"}
chrono = "0.4"
crossbeam-queue = {path = "../../crossbeam/crossbeam-queue", features = ["spsc-waitfree"]}
lazy_static = "1.3.0"
libc = "0.2"
libc_timer = {version = "0.1.0", path = "../../libc_timer"}
log = "0.4"
nix = "0.11"
seq_lock = {version = "0.1.0", path = "../../seq_lock"}
static_assertions = "0.3.1"
structopt = "0.2"

stderrlog = {version = "0.4", optional = true}

[dev-dependencies]
stderrlog = "0.4"

[build-dependencies]
bindgen = "0.55.1"
